--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="monetag" content="cf7c1be89e833697d6e0ae65510dc407">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>⚽ FutbolLatino Pro - Noticias Deportivas en Vivo</title>
